--- a/src/main/resources/templates/About.html
+++ b/src/main/resources/templates/About.html
@@ -18,8 +18,8 @@
                     and rare species of fish found in the world. Our passion for marine life and our commitment to
                     providing the best quality products has earned us a reputation as one of the leading online
                     retailers for rare fish.</p>
-                <button type="button">Discover More</button>
-                <button type="button1">Home</button>
+                <a href="Categories.html"><button type="button">Discover More</button></a>
+                <a href="Homepage.html"><button type="button1">Home</button></a>
             </div>
         </div>
     </section>
