--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UFT-8">
   <title>Deep Waters</title>
-  <link rel="stylesheet" href="Style.css">
+  <link rel="stylesheet" href="Home-Style.css">
 </head>
 
 <body>
