--- a/src/main/resources/templates/About.html
+++ b/src/main/resources/templates/About.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>About us</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="About-Style.css">
 </head>
 
 <body>
