--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UFT-8">
-  <title>Deep Waters</title>
+  <title>THE UNCOMMON CATCH</title>
   <link rel="stylesheet" href="Home-Style.css">
 </head>
 
