--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -26,7 +26,7 @@
     <div class="text">
       <h1 style="color: aliceblue;">THE UNCOMMON CATCH</h1>
       
-      <button type="button">Discover Sea Treasures</button>
+      <button type="button" onclick="window.location.href='Categories.html'">Discover Sea Treasures</button>
     </div>
   </header>
 </body>
