A bunch of fixes and changes

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -9,7 +9,7 @@
 }
 
 header {
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(194, 7, 144, 0)), url(Background2.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(194, 7, 144, 0)), url('../images/Background2.jpg');
   background-position: left;
   background-repeat: no-repeat;
   height: 100vh;
@@ -17,34 +17,6 @@ header {
   background-size: cover;
   background-position: center center;
   position: relative;
-}
-
-.nav {
-  float: right;
-  list-style: none;
-  margin-top: 30px;
-
-}
-
-.nav li {
-  display: inline-block;
-}
-
-.nav li a {
-  color: rgb(242, 239, 244);
-  padding: 5px 20px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  font-size: 15px;
-  text-decoration: none;
-}
-
-.nav li a:hover {
-  background: #780250;
-  color: aliceblue;
-}
-
-.nav ul li a {
-  color: aliceblue;
 }
 
 .logo img {
