--- a/src/main/resources/static/css/categories.css
+++ b/src/main/resources/static/css/categories.css
@@ -8,10 +8,11 @@
     --top-header-size: 30px;
     --mid-header-size: 80px;
     --bottom-header-size: 45px;
-    --btn-bg: rgba( 113, 3, 113);
-    --btn-border-color: rgba( 113, 3, 113);
+    --btn-bg: rgba(113, 3, 113);
+    --btn-border-color: rgba(113, 3, 113);
     --btn-color: #ffffff;
 }
+
 * {
     padding: 0;
     margin: 0;
@@ -19,6 +20,7 @@
     -webkit-tap-highlight-color: transparent;
     color: white;
 }
+
 body {
     font-family: "Poppins", sans-serif;
     overflow-x: hidden;
@@ -27,6 +29,7 @@ body {
     overflow-x: hidden;
 
 }
+
 header {
     background-color: #000000;
     color: #fff;
@@ -34,32 +37,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    justify-content: flex-end; 
+    justify-content: flex-end;
 }
-nav {
-    float: right;
-    list-style: none;
-}
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-nav li {
-    display: inline-block;
-}
-nav a {
-    color: rgb(242, 239, 244);
-    padding: 5px 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 15px;
-    text-decoration: none;
-}
-  
-  nav a:hover {
-    background: rgba(113, 3, 113);
-}
+
 button {
     cursor: pointer;
 }
@@ -73,18 +53,21 @@ a {
 li {
     list-style-type: none;
 }
-li:hover{
+
+li:hover {
     transform: scale(1.1);
 }
+
 img {
     max-width: 100%;
 }
+
 .breadcumb-wrapper {
-    background-image: url(images/fish.jpg);
+    background-image: url('../images/fish.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-color: rgba(0, 0, 0, 0.5); 
+    background-color: rgba(0, 0, 0, 0.5);
     background-blend-mode: darken;
     text-align: center;
     color: var(--white);
@@ -93,29 +76,34 @@ img {
     place-content: center;
     gap: 20px;
 }
-  
+
 .page-title {
     --fs-1: 3.5rem;
     font-size: var(--fs-1);
-    color: white; 
+    color: white;
 }
+
 .bg-main {
     background-color: var(--main-bg-color);
 }
+
 .container {
     max-width: 1366px;
     margin: auto;
     padding: 0 20px;
     position: relative;
 }
+
 .box {
     padding: 20px;
     color: #ffffff;
 }
+
 .breadcumb {
     font-weight: 600;
     padding-left: 20px;
 }
+
 .breadcumb a {
     text-transform: capitalize;
 }
@@ -127,9 +115,11 @@ img {
 .breadcumb span {
     margin: 0 15px;
 }
+
 .pagination {
     text-align: right;
 }
+
 .pagination select {
     font-family: 'Inter', sans-serif;
     font-size: 16px;
@@ -143,44 +133,55 @@ img {
     cursor: pointer;
     transition: all 0.3s ease-in-out;
 }
-.pagination select:hover, .pagination select:focus {
+
+.pagination select:hover,
+.pagination select:focus {
     background-color: #000000;
-    box-shadow: 0 4px 4px rgba( 113, 3, 113);
+    box-shadow: 0 4px 4px rgba(113, 3, 113);
 }
+
 .row {
     display: flex;
     flex-wrap: wrap;
     margin: 0 -15px;
 }
+
 .filter-header {
     display: block;
     margin: 20px 0;
     font-weight: 600;
     text-transform: capitalize;
     font-size: 25px;
-    font-family:"Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
-.filter-list > li {
+
+.filter-list>li {
     margin-top: 55px;
 }
+
 .product-img {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .product-row {
     padding: 45px 0;
 }
-.product-img > img {
+
+.product-img>img {
     max-width: 70%;
 }
-.product-info > * ~ * {
+
+.product-info>*~* {
     margin-top: 25px;
 }
+
 .product-info-detail-title {
     font-weight: 600;
     color: gray;
 }
+
 .product-description {
     font-size: 18px;
     text-align: justify;
@@ -197,11 +198,13 @@ img {
     display: flex;
     align-items: center;
 }
+
 .product-quantity {
     margin: 0 10px;
     font-size: 25px;
     color: #ffffff;
 }
+
 .product-quantity-btn {
     height: 30px;
     width: 30px;
@@ -211,13 +214,16 @@ img {
     border-radius: 50%;
     cursor: pointer;
 }
+
 .product-quantity-btn i {
     font-size: 20px;
     color: var(--main-bg-color);
 }
+
 .rating i {
     color: #ffc107;
 }
+
 .btn-flat {
     display: inline-block;
     border: 2px solid var(--btn-border-color);
@@ -229,13 +235,16 @@ img {
     font-weight: 600;
     text-transform: uppercase;
 }
+
 .btn-hover {
     transition: all 0.3s ease-in-out;
 }
+
 .btn-hover:hover {
     background-color: var(--btn-color);
     color: var(--btn-bg);
 }
+
 .product-card {
     margin-top: 20px;
     background-color: black;
@@ -270,11 +279,13 @@ img {
 .product-card:hover .product-card-img img:nth-child(2) {
     display: block;
 }
+
 .product-card-info {
     padding: 20px;
     text-align: center;
     position: relative;
 }
+
 .product-btn {
     position: absolute;
     bottom: 100%;
@@ -295,7 +306,7 @@ img {
     transform: translateY(0);
 }
 
-.product-btn > * ~ * {
+.product-btn>*~* {
     margin-left: 5px;
 }
 
@@ -304,36 +315,36 @@ img {
     padding: 5px 10px;
     line-height: 17px;
 }
+
 .product-card-name {
     font-size: 20px;
     margin-bottom: 10px;
 }
+
 .product-card-price {
     font-size: 15px;
 }
+
 .product-card-price .curr-price {
     margin-left: 5px;
     font-size: 20px;
     font-weight: 600;
     color: white;
 }
+
 .description {
-    font-size:15px; 
+    font-size: 15px;
     text-align: justify;
-    margin-top: 20px; 
-    font-weight:normal;
-  }
+    margin-top: 20px;
+    font-weight: normal;
+}
+
 @media only screen and (max-width: 1280px) {
     .hero {
-        height: calc(
-            80vh -
-                (
-                    var(--top-header-size) + var(--mid-header-size) +
-                        var(--bottom-header-size)
-                )
-        );
+        height: calc(80vh - (var(--top-header-size) + var(--mid-header-size) + var(--bottom-header-size)));
         margin-bottom: 60px;
     }
+
     .product-btn {
         opacity: 1;
         visibility: visible;
@@ -341,6 +352,7 @@ img {
         position: relative;
         margin-bottom: 20px;
     }
+
     .filter-col {
         position: fixed;
         width: 100%;
@@ -352,31 +364,30 @@ img {
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         transition: left 0.2s ease-in-out;
     }
+
     .pagination {
         justify-content: center;
     }
 }
+
 @media only screen and (max-width: 750px) {
     .hero {
-        height: calc(
-            70vh -
-                (
-                    var(--top-header-size) + var(--mid-header-size) +
-                        var(--bottom-header-size)
-                )
-        );
+        height: calc(70vh - (var(--top-header-size) + var(--mid-header-size) + var(--bottom-header-size)));
         margin-bottom: 60px;
     }
 }
+
 .row {
     display: flex;
     flex-wrap: wrap;
     margin: 0 -15px;
 }
+
 [class*="col-"] {
     padding: 0 15px;
     margin-bottom: 20px;
 }
+
 .col-3 {
     width: 25%;
 }
@@ -388,6 +399,7 @@ img {
 .col-5 {
     width: 41.66%;
 }
+
 .col-7 {
     width: 58.33%;
 }
@@ -395,14 +407,17 @@ img {
 .col-9 {
     width: 75%;
 }
+
 @media only screen and (max-width: 1280px) {
     .col-md-6 {
         width: 50%;
     }
+
     .col-md-12 {
         width: 100%;
     }
 }
+
 @media only screen and (max-width: 750px) {
     .col-sm-12 {
         width: 100%;
