--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,41 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SignUp - IFM</title>
+    <title>SignIn - IFM</title>
     <style media="screen">
-        
-        
         body {
             background-color: black;
         }
 
         .nav {
-        float: right;
-        list-style: none;
-        margin-top: 30px;
-            }
+            float: right;
+            list-style: none;
+            margin-top: 30px;
+        }
 
         .nav li {
-        display: inline-block;
-            }
+            display: inline-block;
+        }
 
         .nav li a {
-        color: rgb(242, 239, 244);
-        padding: 5px 20px;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        font-size: 15px;
-        text-decoration: none;
-            }
+            color: rgb(242, 239, 244);
+            padding: 5px 20px;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            font-size: 15px;
+            text-decoration: none;
+        }
 
         .nav li a:hover {
-        background: #780250;
-        color: aliceblue;
-            }
+            background: #780250;
+            color: aliceblue;
+        }
 
         .nav ul li a {
-        color: aliceblue;
-            }
-        
+            color: aliceblue;
+        }
 
         form {
 
@@ -48,9 +45,10 @@
             background-color: rgba(113, 3, 113);
             position: absolute;
             transform: translate(-50%, -50%);
-            top: 55%;
+            top: 50%;
             left: 50%;
             border-radius: 20px;
+            backdrop-filter: blur(10px);
             border: 2px solid rgba(0, 0, 0, 0.1);
             box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
             padding: 55px 200px;
@@ -58,7 +56,7 @@
 
         form * {
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            width: 400px;
+            width: 450px;
             color: white;
             letter-spacing: 2px;
             outline: none;
@@ -106,40 +104,21 @@
             background-color: black;
             color: white;
         }
-
     </style>
 </head>
 
-<body>
-    <ul class="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Categories</a></li>
-        <li><a href="#">Sign in</a></li>
-        <li><a href="#">Sign up</a></li>
-        <li><a href="#">Net</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+<form th:action="@{/login}" th:object="${user}" method="POST">
+    <h3>Login Here</h3>
 
-</body>
-<form method="get" action="">
-    <h3>SignUp Here</h3>
-
-    <label for="name">Name: </label>
-    <input type="text" id="name" name="name">
-
-    <label for="username">Email: </label>
-    <input type="text" id="username" name="email">
+    <label for="email">Email: </label>
+    <input type="text" id="email" name="email" required th:field="*{email}" />
 
     <label for="password">Password: </label>
-    <input type="password" id="password" name="password">
+    <input type="password" id="password" name="password" required th:field="*{password}" />
 
-    <button>Sign Up</button>
-
+    <button>Log In</button>
 </form>
 </div>
-
-
 
 </body>
 
