--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8">
@@ -9,13 +9,16 @@
 <header>
     <nav th:fragment="navbar" class="navbar">
         <ul class="nav">
+            <li><a th:href="@{/admin/dashboard}" sec:authorize="hasRole('ROLE_ADMIN')">Admin</a></li>
             <li><a th:href="@{/}">Home</a></li>
             <li><a th:href="@{/categories}">Categories</a></li>
-            <li><a th:href="@{/login}">Login</a></li>
-            <li><a th:href="@{/signup}">Sign up</a></li>
             <li><a href="#">Net</a></li>
             <li><a th:href="@{/aboutus}">About</a></li>
             <li><a th:href="@{/contact}">Contact</a></li>
+            <li><a th:href="@{/login}" sec:authorize="!isAuthenticated()">Login</a></li>
+            <li><a th:href="@{/signup}" sec:authorize="!isAuthenticated()">Sign up</a></li>
+            <li><a th:href="@{/logout}" sec:authorize="isAuthenticated()">Sign Out</a>
+            </li>
         </ul>
     </nav>
 </header>
