--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <title>THE UNCOMMON CATCH</title>
-  <link rel="stylesheet" th:href="@{/css/home.css}"/>
-  <link rel="stylesheet" th:href="@{/css/navbar.css}"/>
+  <link rel="stylesheet" th:href="@{/css/home.css}" />
+  <link rel="stylesheet" th:href="@{/css/navbar.css}" />
 </head>
 
 <body>
@@ -18,9 +18,8 @@
     </div>
     <div class="text">
       <h1 style="color: aliceblue;">THE UNCOMMON CATCH</h1>
-      
       <button type="button" onclick="window.location.href='categories'">Discover Sea Treasures</button>
-    </div> 
+    </div>
   </header>
 </body>
 
