--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -30,8 +30,11 @@ header {
   position: absolute;
   width: 620px;
   height: 300px;
-  margin: 21% 31%;
+  margin: auto;
   text-align: center;
+  top: 50%;
+  left: 0;
+  right: 0;
 }
 
 .text h1 {
