Restricted max-width of description on a single line

--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -727,6 +727,10 @@ table td .sort {
   border-radius: 28px;
 }
 
+table .description {
+  width: 30%;
+}
+
 .cardBox a {
   text-decoration: none;
 }
