--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/navbar.css}"/>
 </head>
 
-<body>
+<body id="aboutus">
     <div th:replace="~{fragments/navbar :: navbar}"></div>
     <section class="about-us">
         <div class="main">
