--- a/src/main/resources/templates/admin-orders.html
+++ b/src/main/resources/templates/admin-orders.html
@@ -60,7 +60,7 @@
                             <tr th:onclick="'rowClicked(\'' + ${order.ID} + '\');'" th:if="${order.status.name} != 'Completed'">
                                 <td class="id" th:text="${order.ID}"></td>
                                 <td class="name" th:text="|${order.user.firstName} ${order.user.lastName}|"></td>
-                                <td th:text="${order.price}"></td>
+                                <td th:text="|£${order.price}|"></td>
                                 <td th:text="${order.orderTime}"></td>
                                 <td>
                                     <span class="status pending" th:text="${order.status.name}"
