--- a/src/main/resources/templates/admin-analytics.html
+++ b/src/main/resources/templates/admin-analytics.html
@@ -93,7 +93,7 @@
                                         th:text="${product.description}"></span>
                                     <div class="imgBx"><img th:src="@{/{image}(image=${product.image})}" />
                                     </div>
-                                    <span class="child" th:text="|$${product.price}|"></span>
+                                    <span class="child" th:text="|£${product.price}|"></span>
                                     <!-- TODO: Sales is determined by how many 'Completed' orders have this product -->
                                     <span class="child" th:text="|${sale} Sales|"></span>
                                 </td>
