Fixed formatting issues

--- a/src/main/resources/templates/admin-analytics.html
+++ b/src/main/resources/templates/admin-analytics.html
@@ -40,7 +40,7 @@
                 <div class="card">
                     <div>
                         <div class="numbers" th:text="${sales}"></div>
-                        <div class="cardName">Sales</div>
+                        <div class="cardName">Completed Sales</div>
                     </div>
 
                     <div class="iconBx">
@@ -103,7 +103,6 @@
                 </table>
             </div>
         </div>
-    </div>
     </div>
 
     <script th:src="@{/js/admin.js}"></script>
