--- a/src/main/resources/templates/admin-update-customer.html
+++ b/src/main/resources/templates/admin-update-customer.html
@@ -30,7 +30,7 @@
                     <div>
                         <a th:href="@{/admin/customers}" class="btn" id="return">Return</a>
                         <a style="background-color: red;"
-                            th:href="@{'/admin/customers/delete?testId=' + ${customer.ID}}" class="btn"
+                            th:href="@{'/admin/customers/delete?userId=' + ${customer.ID}}" class="btn"
                             id="return">Delete</a>
                     </div>
                 </div>
