--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -12,9 +12,12 @@
 </head>
 
 <body>
+    <div class="holder">
+        <div th:replace="~{fragments/navbar :: navbar}"></div>
+    </div>
     <div class="container">
         <div class="top-container">
-            <div th:replace="~{fragments/navbar :: navbar}"></div>
+
             <h1>Contact Us - Deep Waters</h1>
             <p>We would love to respond to any enquires.
                 Feel free to get in touch.
