--- a/src/main/resources/templates/admin-update-order.html
+++ b/src/main/resources/templates/admin-update-order.html
@@ -54,7 +54,7 @@
                             <div class="field">
                                 <td><label for="time">Order Time</label></td>
                                 <td><input type="datetime" name="time" id="time" required th:name="time"
-                                        th:value="${order.orderTime}" readonly /></td>
+                                        th:value="${order.time}" readonly /></td>
                             </div>
                         </tr>
                         <tr>
