Implemented front-end changes for viewing products tied to an order

--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -94,7 +94,7 @@
                     <tbody>
                         <th:block th:each="order : ${orders}" id="orderList">
                             <tr th:onclick="'orderRowClicked(\'' + ${order.ID} + '\');'">
-                                <td class="name" th:text="|${order.user.firstName} ${order.user.lastName}"></td>
+                                <td class="name" th:text="|${order.user.firstName} ${order.user.lastName}|"></td>
                                 <td th:text="|£${order.price}|"></td>
                                 <td>
                                     <span class="status pending" th:text="${order.status.name}" th:if="${order.status.name} == 'Pending'"></span>
