--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -12,7 +12,7 @@
             <li><a th:href="@{/admin/dashboard}" sec:authorize="hasRole('ROLE_ADMIN')">Admin</a></li>
             <li><a th:href="@{/}">Home</a></li>
             <li><a th:href="@{/categories}">Categories</a></li>
-            <li><a href="#">Net</a></li>
+            <li><a th:href="@{/net}">Net</a></li>
             <li><a th:href="@{/orders}" sec:authorize="isAuthenticated()">Orders</a></li>
             <li><a th:href="@{/aboutus}">About</a></li>
             <li><a th:href="@{/contact}">Contact</a></li>
